# Practice-first-week-

./: CMakeLists.txt  README.md  file.txt  forfile.txt  main.cpp  my_proj
Headers/: Boat.h  Car.h  Helicopter.h  Spaceship.h  Table.h  Transport.h  WorkWithFile.h
Headers/ForFactory/: CreateBoat.h  CreateCar.h  CreateHelicopter.h  CreateSpaceship.h  Creator.h
Headers/ForStrategy/: Context.h  Strategy.h  StrategyBrand.h  StrategyCapacity.h  StrategyEnginePower.h  StrategyHyperjumpRange.h  StrategyId.h  StrategyLengthBoat.h  StrategyMaxSpeed.h  StrategyMileage.h  StrategyModel.h  StrategyOwners.h  StrategyType.h  StrategyWeight.h  StrategyWidthBoat.h  StrategyYear.h
src/: Boat.cpp  Car.cpp  Helicopter.cpp  Spaceship.cpp  Table.cpp  Transport.cpp  WorkWithFile.cpp
src/ForFactory/: CreateBoat.cpp  CreateCar.cpp  CreateHelicopter.cpp  CreateSpaceship.cpp
src/ForStrategy/: Context.cpp  Strategy.cpp  StrategyBrand.cpp  StrategyCapacity.cpp  StrategyEnginePower.cpp  StrategyHyperjumpRange.cpp  StrategyId.cpp  StrategyLengthBoat.cpp  StrategyMaxSpeed.cpp  StrategyMileage.cpp  StrategyModel.cpp  StrategyOwners.cpp  StrategyType.cpp  StrategyWeight.cpp  StrategyWidthBoat.cpp  StrategyYear.cpp
